@@ -1,3 +1,14 @@
+2021-07-14  Mark Lam  <mark.lam@apple.com>
+
+        Placate exception checker validation in operationObjectAssignUntyped.
+        https://bugs.webkit.org/show_bug.cgi?id=227955
+        rdar://80503746
+
+        Reviewed by Michael Saboff.
+
+        * dfg/DFGOperations.cpp:
+        (JSC::DFG::JSC_DEFINE_JIT_OPERATION):
+
 2021-07-13  Robin Morisset  <rmorisset@apple.com>
 
         Invalid machine code emitted by SpeculativeJIT::emitObjectOrOtherBranch
