@@ -1,3 +1,13 @@
+2021-07-14  Mark Lam  <mark.lam@apple.com>
+
+        Placate exception checker validation in operationObjectAssignUntyped.
+        https://bugs.webkit.org/show_bug.cgi?id=227955
+        rdar://80503746
+
+        Reviewed by Michael Saboff.
+
+        * stress/exception-check-in-operationObjectAssignUntyped.js: Added.
+
 2021-07-14  Keith Miller  <keith_miller@apple.com>
 
         Fix more tests around fuzzing executable allocations
